--- a/templates/registration/confirmation_email.html.twig
+++ b/templates/registration/confirmation_email.html.twig
@@ -6,8 +6,6 @@
     Ce lien expire dans {{ expiresAtMessageKey|trans(expiresAtMessageData, 'VerifyEmailBundle') }}.
 </p>
 
-<p>
-    Cordialement, <br>
-
+<p>Cordialement, <br>
     Equipe VictoryForge
 </p>
