--- a/public/css/security.css
+++ b/public/css/security.css
@@ -1,3 +1,15 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
+
+* {
+    box-sizing: border-box;
+    font-family: "Poppins", sans-serif;
+    text-decoration: none;
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    text-decoration: none;
+}
+
 /* -------REGISTER --------- */
 .register-form {
     display: flex;
@@ -143,7 +155,11 @@ input[type=email]:focus {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.btn-login {
+    margin: 0 !important;
 }
 
 .form-center {
@@ -186,7 +202,66 @@ input[type=email]:focus {
     padding-top: 10px;
 }
 
+#inputPassword {
+    width: 100%;
+    border: 2px solid rgba(255, 255, 255, 0.5);
+    background-color: rgb(51, 41, 174, 0.5);
+    color: white;
+    outline: none;
+    margin: 10px 0;
+    padding: 10px;
+    border-radius: 5px;
+}
 
+#inputPassword:focus {
+    border: 2px solid rgb(255, 255, 255);
+    background-color: rgba(51, 41, 174, 0.5);
+    color: white;
+    outline: none;
+}
+
+.login-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+    /* border: 1px solid rgba(255, 255, 255, 0.5); */
+    border-radius: 10px;
+    background-color: rgba(51, 41, 174, 0.5);
+    width: fit-content;
+    margin: 0 auto;
+}
+
+.login-form>label {
+    width: 100%;
+}
+
+.login-form-container {
+    padding-right: 20px;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-left: 20px;
+    background-image: url(../img/register-bg.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+.btn-lg {
+    width: fit-content !important;
+    margin-inline: auto;
+    padding: 10px 20px 10px 20px;
+    transition: all 0.3s ease;
+    margin: 10px;
+}
+
+.btn-lg:hover {
+    background-color: #e90a0a;
+    color: white;
+}
 
 .tox.tox-tinymce {
     width: 100%;
@@ -203,6 +278,7 @@ input[type=email]:focus {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: 20px;
 }
 
 .jeuTournoi {
@@ -292,9 +368,9 @@ option:hover {
     margin-bottom: 20px;
 }
 
-.required {
+/* .required {
     margin-bottom: 10px;
-}
+} */
 
 /*  Séléctionner le bouton du dernier div de la class equipe-create-form */
 .equipe-create-form>div:last-child>button {
