--- a/public/css/style.css
+++ b/public/css/style.css
@@ -29,6 +29,50 @@ header {
   align-items: center;
 }
 
+.matchs {
+  display: flex;
+  /* flex-direction: column; */
+  gap: 10px;
+  padding: 10px;
+  border-bottom: 1px solid rgb(255, 0, 0);
+  border-top: 1px solid rgb(255, 0, 0);
+  margin: 10px;
+  border-radius: 10px;
+}
+
+.tab-match-title {
+  color: rgba(255, 255, 255, 0.5);
+}
+
+.matchs .match-title {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  width: 50%;
+}
+
+.nb-matchs {
+  display: flex;
+  justify-content: space-between;
+}
+
+
+.fa-square-plus {
+  font-size: 20px;
+  margin-right: 10px;
+  height: 20px;
+  width: 20px;
+  color: rgba(255, 255, 255, 0.5);
+}
+
+.fa-square-plus:hover {
+  color: white;
+}
+
+.match-date-debut {
+  width: 50%;
+}
+
 div.overlay {
   position: fixed;
   top: 0;
@@ -251,7 +295,7 @@ details summary::-webkit-details-marker {
 
 .profil-pic {
   margin-top: 20px !important;
-  padding: 20px!important;
+  padding: 20px !important;
 }
 
 .link-edit-profil button {
@@ -497,7 +541,7 @@ body {
   align-items: center;
 }
 
-.delete-button{
+.delete-button {
   position: absolute;
   z-index: 1;
   right: 0px;
@@ -508,7 +552,7 @@ body {
   cursor: pointer;
 }
 
-.delete-button:hover{
+.delete-button:hover {
   color: white;
 }
 
