--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{% extends 'base2.html.twig' %}
 {% block meta %}
 	<meta name="description" content="Enregistrez-vous pour défiez les meilleurs" />
 {% endblock %}
@@ -10,11 +10,8 @@
 {% endblock %}
 
 {% block body %}
-	<form method="post">
-		{% if error %}
-			<div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-		{% endif %}
-
+<div class="login-form-container">
+	<form method="post" class="login-form">
 		{% if app.user %}
 			<div class="mb-3">
 				Tu est connecté en tant que
@@ -24,21 +21,20 @@
 		{% endif %}
 
 		<h1 class="h1-register">Connexion</h1>
-		<label for="inputEmail">Email :
-		</label>
-		<input placeholder="exemple@exemple.com" type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
-		<label for="inputPassword">Mot de passe :
-		</label>
-		<input placeholder="••••••••" type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
-		<input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
-		<button class="btn-lg" type="submit">Connexion</button>
-	</form>
-	<div>
+		<label for="inputEmail">Email :</label>
+			<input placeholder="exemple@exemple.com" type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
+		<label for="inputPassword">Mot de passe :</label>
+			<input placeholder="••••••••" type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
+			<input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+		<button class="btn-lg" type="submit">START</button>
+	<div class="btn-register btn-login">
 		<p>Pas de compte ?
 			<a href="{{ path('app_register') }}">Inscrivez-vous !</a>
 		</p>
-		<p>Vous avez oublié votre mot de passe ?
+		<p style="font-size:12px;">Mot de passe oublié ?
 			<a href="{{ path('app_forgot_password_request') }}">Réinitialisez-le</a>!
 		</p>
 	</div>
+	</form>
+</div>
 {% endblock %}
