--- a/templates/include/profil_sidebar.html.twig
+++ b/templates/include/profil_sidebar.html.twig
@@ -4,21 +4,21 @@
 	</a>
 	<hr />
 	<div class="user-profil-pic">
-	{% if app.user and app.user.photo %}
-		<a class="profil-pic" href="{{ path('app_mon_profil', {'id' : utilisateur.id}) }}">
-			<img src="{{ vich_uploader_asset(app.user, 'photoFile') }}" alt="Photo de profil">
-			<a class="link-edit-profil" href="" >
-				<button>Personnaliser</button>
+		{% if app.user and app.user.photo %}
+			<a class="profil-pic" href="{{ path('app_mon_profil', {'id' : utilisateur.id}) }}">
+				<img src="{{ vich_uploader_asset(app.user, 'photoFile') }}" alt="Photo de profil">		
 			</a>
-		</a>
 		{% elseif app.user %}
-		<a class="profil-pic" href="{{ path('app_mon_profil') }}">
-			<img style="height: 100px; width: 100px;" src="{{ asset('img/defaultProfile.png') }}" alt="Photo de profil">
-			<a class="link-edit-profil" href="" >
-				<button>Personnaliser</button>
+			<a class="profil-pic" href="{{ path('app_mon_profil') }}">
+				<img style="height: 100px; width: 100px;" src="{{ asset('img/defaultProfile.png') }}" alt="Photo de profil">
 			</a>
-		</a>
 		{% endif %}
+		<button onclick="displayEditProfilePic()">Personnaliser</button>
+		<div id="editProfilePic" class="edit-profil-pic edit-profil-pic-hidden">
+			{# {{ form_start(formEditProfilPic, {'attr': {'class': 'profil-pic-edit'}}) }}
+			{{ form_widget(formEditProfilPic) }}
+			{{ form_end(formEditProfilPic) }} #}
+		</div>
 	</div>
 	<div class="profil-menu">
 		<ul style="list-style:none;">
