--- a/templates/profil/index.html.twig
+++ b/templates/profil/index.html.twig
@@ -7,79 +7,88 @@
 {% endblock %}
 
 {% block body %}
-	<div class="profil-pic-pseudo-container">
-		{% if app.user and app.user.photo %}
-			<figure>
-				<img src="{{ vich_uploader_asset(app.user, 'photoFile') }}" alt="Photo de profil">
-			</figure>
-		{% elseif app.user %}
-			<figure>
-				<img style="height: 80px; width: 80px;" src="{{ asset('img/defaultProfile.png') }}" alt="Photo de profil">
-			</figure>
-		{% endif %}
-		<div class="member-pseudo">
-			<strong>{{ user.pseudo }}</strong>
-			<p>Membre depuis le {{ user.createdAt|format_date('short', locale='fr') }}</p>
-		</div>
+<section class="profil-pic-pseudo-container">
+	{% if app.user and app.user.photo %}
+		<figure>
+			<img src="{{ vich_uploader_asset(app.user, 'photoFile') }}" alt="Photo de profil">
+		</figure>
+	{% elseif app.user %}
+		<figure>
+			<img style="height: 80px; width: 80px;" src="{{ asset('img/defaultProfile.png') }}" alt="Photo de profil">
+		</figure>
+	{% endif %}
+	<div class="member-pseudo">
+		<span>
+			{{ user.pseudo }}
+			{% if app.user and user.id != app.user.id and not user.isBanned %}
+				<a title="Inviter l'utilisateur {{ user.pseudo }} dans votre équipe" 
+					href="#" id="invite-user" data-user-id={{user.id}}>
+					<i class="fa-solid fa-user-plus"></i>
+				</a>
+			{% endif %}
+		</span>
+		<p>Membre depuis le {{ user.createdAt|format_date('short', locale='fr') }}</p>
+	</div>
+	<div class="member-info">
 		{% if app.user and user.id != app.user.id %}
-				{% if alreadyFollow %}
-					<a href="#" class="follow-btn" id="follow-user" data-user-id={{user.id}}>Unfollow</a>
-				{% else %}
-					<a href="#" class="follow-btn" id="follow-user" data-user-id={{user.id}}>Follow</a>
+			{% if alreadyFollow %}
+				<a href="#" class="follow-btn" id="follow-user" data-user-id={{user.id}}>Ne plus suivre</a>
+			{% else %}
+				<a href="#" class="follow-btn" id="follow-user" data-user-id={{user.id}}>Suivre</a>
+			{% endif %}
+				{% if alreadyFollow == true %}
 				{% endif %}
 		{% endif %}
-		{% if user.id != app.user.id %}
-			<div class="contact-user-profil">
-				{# Icon pour contacter l'organisateur d'un tournoi #}
-				<i title="Contacter {{ user.pseudo }}" id="chat-icon" class="fa-regular fa-message chat-icon" data-organisateur-id="{{ user.id }}"></i>
-			</div>
-		{% endif %}
 	</div>
-<div class="profil-content">
-	{% if app.user and user.id != app.user.id and not user.isBanned %}
-		<a href="#" id="invite-user" data-user-id={{user.id}}>Inviter dans mon équipe</a>
-	{% else %}
-		<p>
-			L'utilisateur est banni jusqu'au :
-			{{ user.banExpireIn|format_date('full', locale='fr') }}
-		</p>
-	{% endif %}
-		<div class="titre-equipe">
-			<h2 class="title-mes-equipes">Mes équipes</h2>
-			<a href="{{ path('new_equipe') }}">Crée une équipe</a>
+	{% if user.id != app.user.id %}
+		<div class="contact-user-profil">
+			{# Icon pour contacter l'organisateur d'un tournoi #}
+			<i title="Contacter {{ user.pseudo }}" id="chat-icon" class="fa-regular fa-message chat-icon" data-organisateur-id="{{ user.id }}"></i>
 		</div>
+	{% endif %}
+	</section>
+<section id="profil-content">
+	<div class="titre-equipe">
+		<h2 class="title-mes-equipes">Mes équipes</h2>
+		<a class="crt-team" title="Créer une équipe" href="{{ path('new_equipe') }}">
+			Créer une équipe 
+				<i class="fa-regular fa-square-plus"></i>
+		</a>
+	</div>
 	{% if equipes is empty %}
 		<div class="no-equipe">
 			<p>Vous n'avez pas d'équipe</p>
 		</div>
 	{% else %}
-		<div class="container-equipe">
-			{% for equipe in equipes %}
-			<div class="box-equipe">
-				{% if equipe.logo is not empty %}
-					<figure>
-						<img src="{{ vich_uploader_asset(equipe, 'imageFile') }}" alt="Logo de l'équipe {{ equipe.nomEquipe }}" />
-					</figure>
-					<h2>{{ equipe.nomEquipe }}</h2>
-					<p>
-						Membre depuis le
-						{{ equipe.createdAt|format_date('full', locale='fr') }}
-					</p>
-					<a href="{{ path('app_search_user') }}">Inviter</a>
-					<a href="{{ path('equipe_quitter', { id: equipe.id }) }}">Quitter</a>
-				{% endif %}
-				{% endfor %}
-			</div>
+	<article class="container-equipe">
+		{% for equipe in equipes %}
+		<div class="box-equipe">
+			{% if equipe.logo is not empty %}
+				<figure>
+					<img src="{{ vich_uploader_asset(equipe, 'imageFile') }}" alt="Logo de l'équipe {{ equipe.nomEquipe }}" />
+				</figure>
+				<h2>{{ equipe.nomEquipe }}</h2>
+				<p>
+					Membre depuis le
+					{{ equipe.createdAt|format_date('full', locale='fr') }}
+				</p>
+				<a href="{{ path('app_search_user') }}">Inviter</a>
+				<a href="{{ path('equipe_quitter', { id: equipe.id }) }}">Quitter</a>
+			{% endif %}
+			{% endfor %}
 		</div>
+	</article>
+
 	{% endif %}
-	<div class="box-tournois">
+	<article class="box-tournois">
 		<h2>Mes tournois</h2>
-
 		{% for tournoi in tournois %}
-		<img style="width: clamp(30px, 50px, 50px);" src="{{ vich_uploader_asset(tournoi, 'banniereTrFile') }}"
-			alt="Logo d'un tournoi" />
+			<img style="width: clamp(30px, 50px, 50px);" src="{{ vich_uploader_asset(tournoi, 'banniereTrFile') }}"
+				alt="Logo d'un tournoi" />
 		{% endfor %}
+	</article>
 
+	<article class="box-followers">
 		<h2>Mes followers</h2>
 
 		{% for item in followers %}
@@ -91,11 +100,13 @@
 		{% for item in followings %}
 			<a href="">{{item.following.pseudo}}</a>
 		{% endfor %}
-	</div>
-</div>
-{% endblock %}
+	</article>
 
+</section>
+
+{% endblock %}
+	{# JavaScript #}
 {% block javascripts %}
-<script src="{{ asset('js/script.js') }}"></script>
-<script src="{{ asset('js/profil.js') }}"></script>
+	<script src="{{ asset('js/script.js') }}"></script>
+	<script src="{{ asset('js/profil.js') }}"></script>
 {% endblock %}
