Fonction participer en équipe, ajouter une photo de profil

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -46,7 +46,7 @@ VictoryForge | Tournois en ligne
 	</details>
 </div>
 <div class="tr-main-wrapper">
-	{# <h3 id="find-tr-h3">Trouver des tournois</h3> #}
+	<h1 id="find-tr-h3">Trouver des tournois</h1>
 	<div class="tr-content">
 		<div class="tournois-list">
 			{% for tournoi in tournois %}
