--- a/public/css/style.css
+++ b/public/css/style.css
@@ -287,6 +287,11 @@ details summary::-webkit-details-marker {
   border-radius: 50%;
 }
 
+.profilPic-cr {
+  width: 80px;
+  border-radius: 50%;
+}
+
 .user-profil-pic {
   display: flex;
   justify-content: center;
@@ -922,15 +927,30 @@ button:disabled {
   font-size: 12px;
 }
 
-.crt-team:hover {
+.crt-team i:hover {
   color: white;
 }
 
 .edit-profil-pic {
   height: 100px;
-  background-color: white;
+  background-color: none;
 }
 
 .edit-profil-pic-hidden {
   display: none;
+}
+
+#follow-user {
+  font-size: 12px;
+}
+
+.cr-equipe-profil {
+  font-size: 12px;
+  color: rgba(255, 255, 255, 0.5);
+}
+
+#find-tr-h3 {
+  color: rgba(255, 255, 255, 0.5);
+  text-transform: uppercase;
+  font-size: 16px;
 }
